seed/app-branch/src/components/whoami/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: { { .Values.namespace | default .Release.Namespace | quote } }
spec:
  ports:
    - name: http-whoami
      port: 80
      protocol: TCP
      targetPort: { { .Values.deployment.containerPort } }
  selector:
    app: whoami
  sessionAffinity: None
  type: ClusterIP
